add missed requirements for report, fix errors in test; still need to check test results