@@ -3,9 +3,13 @@ package edu.neu.cs6510.sp25.t1.model;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import java.util.Collections;
-import java.util.Arrays;
+import java.util.List;
+import java.time.Instant;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNull;
+
 
 /**
  * Tests for ReportEntry class.
@@ -18,19 +22,24 @@ class ReportEntryTest {
                 "pipeline-123",
                 "SUCCESS",
                 "Pipeline started",
-                System.currentTimeMillis(),
+                Instant.now().toEpochMilli(),
                 "SUCCESS",
-                Collections.emptyList(),
-                Arrays.asList("Initialization complete", "Resources allocated")
-        );
+                List.of(new StageInfo("Build", "SUCCESS", Instant.now().toEpochMilli(), Instant.now().toEpochMilli())),
+                List.of("Initialization complete", "Resources allocated"),
+                2,
+                "def456",
+                Instant.now().minusSeconds(900).toEpochMilli(),
+                Instant.now().toEpochMilli());
 
-        assertEquals("pipeline-123", log.getPipelineId(), "Pipeline ID should match");
-        assertEquals(ReportLevel.SUCCESS, log.getLevel(), "Level should be SUCCESS");
-        assertEquals("Pipeline started", log.getMessage(), "Message should match");
-        assertTrue(log.getTimestamp() > 0, "Timestamp should be positive");
-        assertEquals("SUCCESS", log.getStatus(), "Status should match");
-        assertTrue(log.getStages().isEmpty(), "Stages list should be empty");
-        assertEquals(2, log.getDetails().size(), "Details should contain 2 items");
+        assertEquals("pipeline-123", log.getPipelineId());
+        assertEquals(ReportLevel.SUCCESS, log.getLevel());
+        assertEquals("Pipeline started", log.getMessage());
+        assertTrue(log.getTimestamp() > 0);
+        assertEquals("SUCCESS", log.getStatus());
+        assertEquals(1, log.getStages().size());
+        assertEquals(2, log.getDetails().size());
+        assertEquals(2, log.getRunNumber());
+        assertEquals("def456", log.getGitCommitHash());
     }
 
     @Test
@@ -42,22 +51,29 @@ class ReportEntryTest {
                 "An error occurred",
                 1678945600000L,
                 "FAILED",
-                Arrays.asList("build", "test"),
-                Arrays.asList("Build failed", "Tests skipped")
-        );
+                List.of(new StageInfo("Test", "FAILED", 1678945600000L, 1678945800000L)),
+                List.of("Build failed", "Tests skipped"),
+                3,
+                "xyz789",
+                1678945000000L,
+                1678946000000L);
 
         final String json = mapper.writeValueAsString(log);
-        assertTrue(json.contains("\"level\":\"FAILED\""), "JSON should contain level as string");
-        assertTrue(json.contains("\"details\":["), "JSON should contain details array");
+        assertTrue(json.contains("\"level\":\"FAILED\""));
+        assertTrue(json.contains("\"details\":"));
 
         final ReportEntry deserializedLog = mapper.readValue(json, ReportEntry.class);
-        assertEquals("pipeline-123", deserializedLog.getPipelineId(), "Pipeline ID should persist");
-        assertEquals(ReportLevel.FAILED, deserializedLog.getLevel(), "Level should be FAILED");
-        assertEquals("An error occurred", deserializedLog.getMessage(), "Message should persist");
-        assertEquals(1678945600000L, deserializedLog.getTimestamp(), "Timestamp should persist");
-        assertEquals("FAILED", deserializedLog.getStatus(), "Status should persist");
-        assertEquals(2, deserializedLog.getStages().size(), "Should have 2 stages");
-        assertEquals(2, deserializedLog.getDetails().size(), "Should have 2 details");
+        assertEquals("pipeline-123", deserializedLog.getPipelineId());
+        assertEquals(ReportLevel.FAILED, deserializedLog.getLevel());
+        assertEquals("An error occurred", deserializedLog.getMessage());
+        assertEquals(1678945600000L, deserializedLog.getTimestamp());
+        assertEquals("FAILED", deserializedLog.getStatus());
+        assertEquals(1, deserializedLog.getStages().size());
+        assertEquals(2, deserializedLog.getDetails().size());
+        assertEquals(3, deserializedLog.getRunNumber());
+        assertEquals("xyz789", deserializedLog.getGitCommitHash());
+        assertEquals(1678945000000L, deserializedLog.getStartTime());
+        assertEquals(1678946000000L, deserializedLog.getCompletionTime());
     }
 
     @Test
@@ -69,8 +85,11 @@ class ReportEntryTest {
                 System.currentTimeMillis(),
                 "SUCCESS",
                 Collections.emptyList(),
-                Collections.emptyList()
-        );
+                Collections.emptyList(),
+                3,
+                "commitDEF",
+                System.currentTimeMillis() - 7000,
+                System.currentTimeMillis());
 
         assertEquals(ReportLevel.SUCCESS, log.getLevel(), "Null level should default to SUCCESS");
     }
@@ -84,29 +103,36 @@ class ReportEntryTest {
                 System.currentTimeMillis(),
                 "SUCCESS",
                 Collections.emptyList(),
-                Collections.emptyList()
-        );
+                Collections.emptyList(),
+                4,
+                "commitGHI",
+                System.currentTimeMillis() - 9000,
+                System.currentTimeMillis());
 
         assertEquals(ReportLevel.SUCCESS, log.getLevel(), "Invalid level should default to SUCCESS");
     }
 
-//    @Test
-//    void testNullCollections() {
-//        final ReportEntry log = new ReportEntry(
-//                "pipeline-123",
-//                "SUCCESS",
-//                "Pipeline started",
-//                System.currentTimeMillis(),
-//                "SUCCESS",
-//                null,
-//                null
-//        );
-//
-////        assertNotNull(log.getStages(), "Stages should not be null");
-//        assertTrue(log.getStages().isEmpty(), "Stages should be empty");
-//        assertNotNull(log.getDetails(), "Details should not be null");
-//        assertTrue(log.getDetails().isEmpty(), "Details should be empty");
-//    }
+    @Test
+    void testFormat_ReportWithNullFields() {
+        final ReportEntry report = new ReportEntry(
+                "pipeline-123",
+                null, // level
+                "Pipeline status", // message
+                System.currentTimeMillis(), // timestamp
+                "UNKNOWN", // status
+                null, // stages
+                null, // details
+                5,
+                "commitJKL",
+                System.currentTimeMillis() - 11000,
+                System.currentTimeMillis());
+
+        assertEquals(ReportLevel.SUCCESS, report.getLevel(), "Null level should default to SUCCESS");
+        assertEquals("Pipeline status", report.getMessage(), "Message should match");
+        assertNull(report.getStages(), "Stages should be null");
+        assertNull(report.getDetails(), "Details should be null");
+    }
+
 
     @Test
     void testJsonDeserialization() throws Exception {
